# LogoScraper

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  GETTING_STARTED.md  LEARNINGS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.1.0.md  TROUBLESHOOTING.md  config.py  example_companies.csv  flow.md  logo_scraper.py  main.py  prepare_env.bat  pyproject.toml  release.ps1  requirements.txt
.github/workflows/: ci.yml
docs/: DECISIONS.md  GETTING_STARTED.md  LEARNINGS.md  README.md  RELEASE_CHECKLIST.md  TROUBLESHOOTING.md
infra/: deploy.ps1  infra_config.json  main.bicep  main.parameters.json
services/: azure_storage_service.py  azure_vision_service.py  clearbit_service.py  company_search_service.py  default_service.py  duckduckgo_service.py  favicon_service.py  input_data_service.py
src/: __version__.py  cleanup.py  config.py  logo_scraper_core.py  main.py
src/services/: clearbit_service.py  default_service.py  favicon_service.py  (+1 more)
tests/: list_container.py  test_cli_config.py  test_config_flow.py  test_end_to_end_config.py  test_favicon_service.py  test_image_resizer.py  test_input_service.py  test_logo_scraper.py  test_logo_scraper_core.py  test_specific_logos.py  test_update_config_from_args.py  test_url_utils.py
utils/: batch_processor.py  company_processor.py  config_validator.py  default_logo_generator.py  domain_filter.py  enrichment.py  filter_utils.py  image_resizer.py  image_utils.py  log_config.py  progress_tracker.py  rate_limiter.py  search_cache.py  session_manager.py  text_renderer.py  url_discovery.py  url_utils.py
(+12 files in other folders)
